# Clas12Tool

./: .gitignore  AccesssingBankDataInCpp.txt  CMakeLists.txt  CMakeLists.txt.hipo3  CMakeLists.txt.hipo4  NOTESHIPO3~  README.md
Banks/: calorimeter.h  clas12defs.h  clas12reader.cpp  clas12reader.h  covmatrix.cpp  particle.cpp  particle.h  particle_detector.cpp  particle_detector.h  region_cdet.cpp  region_cdet.h  region_fdet.cpp  region_fdet.h  region_ft.cpp  region_ft.h  region_particle.cpp  region_particle.h
Clas12Banks3/: CMakeLists.txt  clas12reader.cpp  covmatrix.h  header.h  particle_detector.h
Clas12Banks4/: CMakeLists.txt  Clas12LinkDef.h  cherenkov.h  clas12reader.cpp  clas12reader.h  event.h  ftbevent.h  ftbparticle.h  particle.h  particle_detector.h  region_cdet.cpp  region_cdet.h  region_fdet.cpp  region_fdet.h  region_ft.cpp  region_ft.h  region_particle.h  scintillator.h
Clas12Root/: BankHist.cpp  CMakeLists.txt  HipoSelector.cpp  HipoTreeMaker.cpp  ParticleHist.cpp  ParticleTree.cpp  tempHipoSelector.cpp  templateParticleTreeAction.C
Examples/: CMakeLists.txt  clasReactions.cpp  helloWord.cpp  readEvents.cc
Hipo3/: CMakeLists.txt
Hipo4/: CMakeLists.txt  bank_cpp_ACLiC_dict_rdict.pcm  dictionary_cpp_ACLiC_dict_rdict.pcm  event_cpp_ACLiC_dict_rdict.pcm  reader.cpp  reader_cpp_ACLiC_dict_rdict.pcm  record_cpp_ACLiC_dict_rdict.pcm  utils.cpp  utils.h  utils_cpp_ACLiC_dict_rdict.pcm
RunRoot/: Ex1_CLAS12Reader.C  Ex2_HipoDraw.C  Ex3_ProcessSelector.C  Ex3b_TestSelector.C  Ex4_TreeMaker.C  HallBEvent.C  HallBEventRecord.C  HallBEventRecordMT.C  LoadProofLib4.C  NOTES  ReadEvents.C  Test.C  importToROOT.C  importToROOT3.C  testSelector.C  testSelector.h
docs/: Summary.odp
(+17 files in other folders)
